--- a/Ozal.csproj
+++ b/Ozal.csproj
@@ -67,10 +67,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="kanye.aspx" />
+    <Content Include="local\kanye-wiki.jpg" />
     <Content Include="local\kanye.jpg" />
     <Content Include="local\kendrick.jpeg" />
     <Content Include="local\metro.jpg" />
     <Content Include="local\mf.jpg" />
+    <Content Include="local\staroutline.png" />
     <Content Include="local\swift.png" />
     <Content Include="local\tupac.jpg" />
     <Content Include="taylor.aspx" />
@@ -78,6 +81,13 @@
     <Content Include="home.aspx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="kanye.aspx.cs">
+      <DependentUpon>kanye.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="kanye.aspx.designer.cs">
+      <DependentUpon>kanye.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Navigation.Master.cs">
       <DependentUpon>Navigation.Master</DependentUpon>
